fix: thumbnail hover contrast effect

--- a/src/components/Thumbnail/Thumbnail.module.css
+++ b/src/components/Thumbnail/Thumbnail.module.css
@@ -13,7 +13,7 @@
   cursor: pointer;
 }
 
-.container:hover > .image {
+.container:hover > a > .image {
   filter: contrast(100%);
 }
 
